About HTML practice assignment

--- a/templates/practice.html
+++ b/templates/practice.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <!-- comment comment comment -->
     <p>This is a practice.</p>
     <p>This is the <strong><em>second</em></strong> paragraph.</p>
 </body>
