Commit and Push app.py with app route to about html page. EDIT made to relative /hello hyperlink.

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <h2>Course: BMGT407</h2>
 
     <!-- Option to return to /hello page with hyperlink on word Home -->
-    <p>Return <a> href="/hello"Home</a></p>
+    <p>Return <a href="/hello"> Home</a></p>
 
     <p>This is the homework assignment due <strong><em>Feb. 20th at 8 pm.</em></strong></p>
 
@@ -34,7 +34,7 @@
     <p>I am a student in the <strong>Robert H. Smith School of Business</strong></p>
     <!-- Insert RH Smith Business Logo. -->
     <img src="https://terpconnect.umd.edu/~jbono/bmgt407/images/smith-logo.png" alt="Robert H. Smith Logo"
-         width="200" height="100">
+         width=450" height="100">
 
     <p>Here is a table of BMGT courses I've taken and when I took them:</p>
 
