Commit for about.css with new style href

--- a/templates/about-css.html
+++ b/templates/about-css.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Homework Assignment</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>About-CSS Homework Assignment</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 
 </head>
 <body>
