Commit and Push for Module 8 Changes, app.py update and html pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,10 +31,10 @@
         <li>Mint Chocolate Chip</li>
     </ol>
 
-    <p>I am a student in the <strong>Robert H. Smith School of Business</strong></p>
+    <p>I am a student in the <strong>Robert H. Smith School of Business.</strong></p>
     <!-- Insert RH Smith Business Logo. -->
     <img src="https://terpconnect.umd.edu/~jbono/bmgt407/images/smith-logo.png" alt="Robert H. Smith Logo"
-         width=450" height="100">
+         width="450" height="100">
 
     <p>Here is a table of BMGT courses I've taken and when I took them:</p>
 
