Final commit for app.py, favorite-course, contact, and base.html

--- a/templates/favorite-course.html
+++ b/templates/favorite-course.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Favorite Course</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 
 </head>
 <body>
@@ -12,7 +11,7 @@
 {% block title %}Favorite Course{% endblock %}
 {% block content %}
     <h1>Favorite Course</h1>
-    <p>You entered your favorite course as: {{ request.args.get('subject') }} {{ request.args.get('course_number') }}</p>
+    <p>You entered your favorite course as: <strong>{{ subject }}</strong> <strong>{{ course_number }}</strong></p>
 {% endblock %}
 
 </body>
