--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-
 </head>
 <body>
 
 {% extends "base.html" %}
 {% block title %}Contact{% endblock %}
 {% block content %}
+
+    <!-- if loop for html display -->
     <h1>Contact</h1>
     {% if form_submitted %}
         <p>Thank you for contacting us!</p>
@@ -19,8 +19,10 @@
             <li>First Name: {{ request.form.get('first_name') }}</li>
             <li>Last Name: {{ request.form.get('last_name') }}</li>
             <li>Email Address: {{ request.form.get('email') }}</li>
-            <li>Additional Field: {{ request.form.get('additional_field') }}</li>
+            <li>Phone Number (Optional): {{ request.form.get('phone_number') }}</li>
         </ul>
+
+        <!-- display if information not entered yet -->
     {% else %}
         <form method="post">
             <div class="form-group">
@@ -36,8 +38,8 @@
                 <input type="email" class="form-control" id="email" name="email">
             </div>
             <div class="form-group">
-                <label for="additional_field">Additional Field</label>
-                <input type="text" class="form-control" id="additional_field" name="additional_field">
+                <label for="phone_number">Phone Number (Optional)</label>
+                <input type="text" class="form-control" id="phone_number" name="phone_number">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
